src/test/compile-fail/issue-2937.rs
// error-pattern:failed to resolve imports
import x = m::f;

module m {
}

fn main() {
}
